--- a/css/bear.css
+++ b/css/bear.css
@@ -10,7 +10,7 @@ html {
 
 /* Write your solution here */
 
-@media only screen and (max-width: 1295px) {
+@media only screen and (min-width: 400px) {
   #bear {
     position: absolute;
     left: 800px;
